Presetantion Contact added

--- a/src/app/presentation/presentation.page.html
+++ b/src/app/presentation/presentation.page.html
@@ -6,7 +6,8 @@
 
 <ion-content style="position : relative;">
   <ion-card style="position: relative; left :20%; top:15%; ">
-    <img alt="Silhouette of mountains" src="assets/images/barRecette@3x.png" />
+    <img alt="Silhouette of mountains" src= {{presente.image}} />
+
     <ion-card-header>
       <ion-card-title> {{presente.titre}} </ion-card-title>
       <ion-card-subtitle>description</ion-card-subtitle>
