page presente-produit

--- a/src/app/restaurant/restaurant.page.html
+++ b/src/app/restaurant/restaurant.page.html
@@ -13,12 +13,12 @@
 
     <ion-row  style="border : 2px solid red ;margin-bottom : 5px  ; ">
         <ion-col style = "border : 2px solid orange ; margin-left : 5px ; ">
-          <ion-button fill = "clear"> Bistrot des Gascons</ion-button>
+          <ion-button fill = "clear" (click) = "onClickRestaurant('gascons')"> Bistrot des Gascons</ion-button>
             
         </ion-col>
 
         <ion-col style = "border : 2px solid orange ; margin-left : 5px ; ">
-          <ion-button fill = "clear">Les fous de l'ile </ion-button>
+          <ion-button fill = "clear" (click) = "onClickRestaurant('fou')">Les fous de l'ile </ion-button>
 
         </ion-col>
     </ion-row>
@@ -27,12 +27,12 @@
     <ion-row style="border : 2px solid red ;margin-bottom : 5px  ; ">
 
       <ion-col style = "border : 2px solid orange ; margin-left : 5px ; ">
-        <ion-button fill = "clear">Bistrot Landais</ion-button>
+        <ion-button fill = "clear" (click) = "onClickRestaurant('bristo')">Bistrot Landais</ion-button>
 
       </ion-col>
 
       <ion-col style = "border : 2px solid orange ; margin-left : 5px ; ">
-        <ion-button fill = "clear">Villa 9-Trois </ion-button>
+        <ion-button fill = "clear" (click) = "onClickRestaurant('villa')">Villa 9-Trois </ion-button>
 
       </ion-col>
 
@@ -40,12 +40,12 @@
 
     <ion-row style="border : 2px solid red  ;margin-bottom : 5px ; ">
       <ion-col style = "border : 2px solid orange ; margin-left : 5px ; ">
-        <ion-button fill = "clear">Bistrot du Sommelier</ion-button>
+        <ion-button fill = "clear" (click) = "onClickRestaurant('fou')">Bistrot du Sommelier</ion-button>
 
       </ion-col>
 
       <ion-col style = "border : 2px solid orange ; margin-left : 5px ; ">
-        <ion-button fill = "clear">Devenez paternaire!</ion-button>
+        <ion-button fill = "clear" (click) = "onClickRestaurant('fou')">Devenez paternaire!</ion-button>
 
       </ion-col>
 
