--- a/src/app/produit/produit.page.html
+++ b/src/app/produit/produit.page.html
@@ -8,19 +8,19 @@
     <ion-grid style = "border : 2px solid orange; width: 50%;">
       <ion-row style= "border : 2px  solid red; margin-bottom : 5px; height : 30% ;">
         <ion-col>
-         <span><img src="assets/icon/poulpe.png" height="35"></span><ion-button fill = "clear">Poissons </ion-button>
+         <span><img src="assets/icon/poulpe.png" height="35"></span><ion-button fill = "clear" (click) = "onClickProduit('poisson')">Poissons </ion-button>
         </ion-col>
         
       </ion-row>
       <ion-row style= "border : 2px  solid red; margin-bottom : 5px; height : 30% ;">
         <ion-col>
-        <span><img src="assets/icon/poulpe.png" height="35"></span><ion-button fill = "clear">Coquillages</ion-button>
+        <span><img src="assets/icon/poulpe.png" height="35"></span><ion-button fill = "clear" (click) = "onClickProduit('coquillage')">Coquillages</ion-button>
         </ion-col>
         
       </ion-row>
       <ion-row style= "border : 2px  solid red; margin-bottom : 5px; height : 30% ;">
         <ion-col>
-       <span><img src="assets/icon/poulpe.png" height="35"></span><ion-button fill = "clear">Crustacés</ion-button>
+       <span><img src="assets/icon/poulpe.png" height="35"></span><ion-button fill = "clear" (click) = "onClickProduit('crustaces')">Crustacés</ion-button>
         </ion-col>
         
       </ion-row>
@@ -28,7 +28,7 @@
 
       <ion-row style= "border : 2px  solid red; margin-bottom : 5px; height : 30% ;">
         <ion-col>
-        <span><img src="assets/icon/poulpe.png" height="35"></span><ion-button fill = "clear">Promotions</ion-button>
+        <span><img src="assets/icon/poulpe.png" height="35"></span><ion-button fill = "clear" (click) = "onClickProduit('promotion')">Promotions</ion-button>
         </ion-col>
         
       </ion-row>
