--- a/src/app/presente-produit/presente-produit.page.html
+++ b/src/app/presente-produit/presente-produit.page.html
@@ -6,4 +6,33 @@
 
 <ion-content>
 
+  <ion-list>
+
+      <ion-item *ngFor = "let element of liste ">
+
+          <!-- une image + le nom du produit +  le prix + € -->
+
+          <span><img src="assets/icon/poulpe.png" height ="20"></span><ion-button id = "open-modal" expand="block" >{{ element.name}}</ion-button> <span>{{element.price}}</span><span>€</span>
+      </ion-item>
+  </ion-list>
+
+
+  
 </ion-content>
+
+
+<ion-modal
+trigger="open-modal"
+[initialBreakpoint]="0.25"
+[breakpoints]="[0, 0.25, 0.5, 0.75]"
+handleBehavior="cycle"
+>
+<ng-template>
+  <ion-content class="ion-padding">
+    <div class="ion-margin-top">
+      <ion-label>Choisir la quantité .</ion-label>
+
+    </div>
+  </ion-content>
+</ng-template>
+</ion-modal>
